src/test/ui/nll/capture-ref-in-struct.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/capture-ref-in-struct.rs:32:16
   |
32 |             y: &y,
   |                ^^ borrowed value does not live long enough
...
37 |     }
   |      - borrowed value only lives until here
   |
   = note: borrowed value must be valid for lifetime '_#4r...

error: aborting due to previous error

